
2022-07-19  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: temporary adjust source reference when building
	  registers to not point to an innocent source code
	* tree.c (cb_build_picture, char_to_precedence_idx): cater for possible
	  call without a current program
	* tree.c (cb_build_picture): return cb_picture instead of cb_tree, as
	  all but one caller directly use it that way
	* field.c (cb_resolve_redefines): fixed reasonable compiler warning
	* typeck.c (cb_build_generic_register): finished VALUE definition and
	  checks, now handling numeric and alphanumeric literals (others prepared)
	* typeck.c, parser.y, cobc.h: moved external_defined_fields_global and
	  external_defined_fields_ws to the sole use: typeck.c
	* typeck.c: first time support for creating registers unknown to cobc
	  with configuration entry or -fregister, to allow this store the original
	  pre-validated definition in the new struct external_defined_register
	  and build the field when parsing for the program starts

2022-07-18  Simon Sobisch <simonsobisch@gnu.org>

	* config.c (cb_config_entry): fixed defaultbyte convenience option
	* field.c (cb_build_full_field_reference): minimal refactoring
	* reserved.c (add_register): enabled generic register generation
	* tree.c (cb_build_intrinsic): minimal verification for FUNCTION SUBSTITUTE
	* typeck.c: add field level 77 to any generated register (previously was 0),
	  those now show up in the symbol and xref list and dump output if they are
	  used (including GDB debugging extensions)
	* typeck.c (cb_build_generic_register): now handles VALUE definition and
	  checks for "able to parse complete definition"
	* cobc.c: skip unreferenced special register in listing/xref

2022-07-14  Matthew Remacle <mattata@users.sf.net

	* tree.c (literal_for_diagnostic): fixed #844 stack-based buffer overflow

2022-07-14  Simon Sobisch <simonsobisch@gnu.org>

	* config.def, config.c: changed defaultbyte option from "INT" to ANY"