@@ -1,4 +1,8 @@
 
+2022-07-27  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
+
+	* typeck.c (cb_emit_sort_init): avoid SIGSEGV on SORT of toplevel field
+
 2022-07-19  Simon Sobisch <simonsobisch@gnu.org>
 
 	* parser.y, typeck.c: temporary adjust source reference when building
